fix the relationships between the entity, and add the logging aspects